--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,10 @@ html, body, #root {
   overflow: hidden;
 }
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   flex-direction: column;
